tdf#96514: Emits a 'notify' signal when zoom changes

Change-Id: I5f55e4cce26096afcae3ad3711efa37757aada39
Reviewed-on: https://gerrit.libreoffice.org/20798
Reviewed-by: David Tardon <dtardon@redhat.com>
Tested-by: David Tardon <dtardon@redhat.com>
(cherry picked from commit 398ef76d5dc3ec1ed22fa1d9fd9151b61cce54e2)
Reviewed-on: https://gerrit.libreoffice.org/21273
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Pranav Kant <pranavk@gnome.org>